objects/Apttus__AgreementLineItem__c.object
<CustomObject>
    <label>Agreement Line Item</label>
    <nameField>
        <displayFormat>AL-{0000000000}</displayFormat>
        <label>Line Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>